revert recurring todos, add more dtos, get todo detail
