# models/dtos/get_todos_response.go
@@ -1,0 +1,16 @@
+package dtos
+
+import (
+	"time"
+	"to-do-list-golang/models"
+)
+
+type GetTodosResponse struct {
+	ID         uint            `json:"id"`
+	Title      string          `json:"title"`
+	Status     string          `json:"status"`
+	Priority   string          `json:"priority"`
+	CategoryID uint            `json:"categoryId"`
+	Category   models.Category `json:"category"`
+	Due        time.Time       `json:"due"`
+}
